Avoid scrollbars in all circumstances
For instance, last x-label in time series that end in January could need
extra right space (forcing scrollbars to appear).

--- a/visual.css
+++ b/visual.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: #fff;
+	overflow: hidden;
 }
 
 .visual {
